[tool.poetry]
name = "corona-dashboard"
version = "0.1.0"
description = ""
authors = ["Hojun Kim <76956067+hojunkim1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.3.0"
jupyter-dash = "^0.4.1"
pandas = "^1.4.1"
jupyterlab = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
